--- a/SbReceiver/SbReceiver.csproj
+++ b/SbReceiver/SbReceiver.csproj
@@ -7,4 +7,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+	<ItemGroup>
+		<PackageReference Include="Azure.Messaging.ServiceBus" Version="7.7.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\SbShared\SbShared.csproj" />
+	</ItemGroup>
+
 </Project>
