--- a/SbSender/SbSender.csproj
+++ b/SbSender/SbSender.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.7.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SbShared\SbShared.csproj" />
+  </ItemGroup>
+
 </Project>
