--- a/SbReceiver/SbReceiver.csproj
+++ b/SbReceiver/SbReceiver.csproj
@@ -9,6 +9,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Azure.Messaging.ServiceBus" Version="7.7.0" />
+		<PackageReference Include="Microsoft.Azure.ServiceBus" Version="5.2.0" />
 	</ItemGroup>
 
 	<ItemGroup>
