Setup Sender project to push messages to queue

--- a/SbSender/SbSender.csproj
+++ b/SbSender/SbSender.csproj
@@ -1,9 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>548a6efb-3104-4db9-a24d-39a549e035c0</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
