--- a/SbSender/appsettings.json
+++ b/SbSender/appsettings.json
@@ -6,5 +6,8 @@
     }
   },
   "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AzureServiceBus": "Endpoint=sb://tlotsander.servicebus.windows.net/;SharedAccessKeyName=rootDemoKey;SharedAccessKey=m0qOJk/3YhMmtiJKWTqQS9iYOYuxHY2IqEcEuRwmWbQ="
+  }
   
 }
