Remove connection string and move it to app secrets

--- a/SbReceiver/appsettings.json
+++ b/SbReceiver/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "AzureServiceBus": "Endpoint=sb://tlotsander.servicebus.windows.net/;SharedAccessKeyName=rootDemoKey;SharedAccessKey=m0qOJk/3YhMmtiJKWTqQS9iYOYuxHY2IqEcEuRwmWbQ="
+    "AzureServiceBus": ""
   }
 }
