--- a/SbSender/appsettings.json
+++ b/SbSender/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AzureServiceBus": "Endpoint=sb://tlotsander.servicebus.windows.net/;SharedAccessKeyName=rootDemoKey;SharedAccessKey=m0qOJk/3YhMmtiJKWTqQS9iYOYuxHY2IqEcEuRwmWbQ="
+    "AzureServiceBus": ""
   }
   
 }
